<resources>
    <string name="app_name">ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_messages">All Messages</string>
    <string name="add_user">Add User</string>
    <string name="type_a_message">Type a message</string>
    <string name="video_call">video call</string>
    <string name="call">call</string>
    <string name="back">back</string>
    <string name="emoji">emoji</string>
    <string name="camera">camera</string>
    <string name="send_message">send message</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="account_settings">Account Settings</string>
    <string name="sign_out">LOG OUT</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="log_out_message">Oh no! You\'re leaving…\n Are you sure ?</string>
    <string name="log_out">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="log_out_title">Log Out?</string>
    <string name="delete_account_message">Are you sure you want to delete your account?</string>
    <string name="yes_log_me_out">Yes, Log Me Out</string>
    <string name="naah_just_kidding">Naah, Just Kidding</string>
    <string name="save">Save</string>
    <string name="send_friend_request">Send Request</string>
    <string name="friend_requests">FRIEND REQUESTS</string>
</resources>