<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ahmet.features.account_settings.AccountSettingsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".account_settings.AccountSettingsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_purple">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:fontFamily="@font/autour_one"
                android:text="Kotlin-Chat-App"
                android:textColor="@color/orange"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/titleArea"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_baseline_arrow_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/pageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/account_settings"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/back"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleArea">

                <Button
                    android:id="@+id/logOutButton"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:backgroundTint="@color/light_purple_100"
                    android:drawableLeft="@drawable/ic_baseline_logout"
                    android:text="@string/sign_out" />

                <Button
                    android:id="@+id/deleteAccount"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:backgroundTint="@color/light_purple_100"
                    android:drawableLeft="@drawable/ic_baseline_delete"
                    android:text="@string/delete_account" />

                <Button
                    android:id="@+id/editProfile"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:backgroundTint="@color/light_purple_100"
                    android:drawableLeft="@drawable/ic_baseline_edit_24"
                    android:text="@string/edit_profile" />

                <Button
                    android:id="@+id/friendRequests"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:backgroundTint="@color/light_purple_100"
                    android:drawableLeft="@drawable/ic_baseline_friend_request"
                    android:text="@string/friend_requests" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>