<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="com.ahmet.features.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:scrollbars="none"
        tools:context=".login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_purple">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="24dp"
                android:textColorHint="@color/white_100"
                android:theme="@style/TextInputLayoutAppearance"
                app:boxStrokeColor="@color/orange"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintTextColor="@color/orange"
                app:layout_constraintBottom_toTopOf="@+id/loginPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_email"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/white_100"
                    android:textColorHint="@color/orange" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:textColorHint="@color/white_100"
                android:theme="@style/TextInputLayoutAppearance"
                app:boxStrokeColor="@color/orange"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:hintTextColor="@color/orange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_key"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/white_100" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="64dp"
                android:backgroundTint="@color/orange"
                android:text="@string/login"
                android:textColor="@color/dark_purple"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginBottom="64dp"
                android:src="@drawable/login"
                app:layout_constraintBottom_toTopOf="@+id/loginEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:buttonTint="@color/orange"
                android:checked="@={viewModel.rememberMeCheckBox}"
                android:text="@string/remember_me"
                android:textColor="@color/white_100"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white_100"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton">

                <TextView
                    android:id="@+id/accountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/white_100" />

                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/accountText"
                    android:text="@string/sign_up"
                    android:textColor="@color/orange"
                    android:textStyle="bold" />

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="96dp"
                android:indeterminateTint="@color/orange"
                android:indeterminate="true"
                android:visibility="@{viewModel.progressBarVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>