<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ahmet.features.chat.ChatViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_purple"
        tools:context=".chat.ChatFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:background="@color/dark_purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/dark_purple">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/current_user_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/temp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/back"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/Circular" />

                    <TextView
                        android:id="@+id/chat_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Dasia Patrick"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/current_user_image"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Online Now"
                        android:textColor="@color/green"
                        app:layout_constraintStart_toEndOf="@+id/current_user_image"
                        app:layout_constraintTop_toBottomOf="@+id/chat_user_name" />

                    <ImageButton
                        android:id="@+id/video_call"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/ic_baseline_videocam"
                        android:contentDescription="@string/video_call"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />

                    <ImageButton
                        android:id="@+id/call"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/ic_baseline_call"
                        android:contentDescription="@string/call"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/video_call"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/back"
                        android:src="@drawable/ic_baseline_arrow_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/const_layout_bg"
                android:textColorHint="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageButton
                    android:id="@+id/emoji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/ic_baseline_emoji_emotions"
                    android:contentDescription="@string/emoji"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="12dp"
                    android:background="@color/light_purple"
                    android:hint="@string/type_a_message"
                    android:text="@={viewModel.message}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:theme="@style/CustomEditTextTheme"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/camera"
                    app:layout_constraintStart_toEndOf="@+id/emoji"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/ic_baseline_camera_alt"
                    android:contentDescription="@string/camera"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/send"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/ic_baseline_send"
                    android:contentDescription="@string/send_message"
                    android:onClick="@{() -> viewModel.sendMessageData()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/orange"
                android:visibility="@{viewModel.progressBarVisibility}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chat_recylerview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_user" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>