<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customAddUserDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:textColorHint="@color/white_100"
        android:theme="@style/TextInputLayoutAppearance"
        app:boxStrokeColor="@color/orange"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_email"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/white_100"
            android:textColorHint="@color/orange" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="24dp"
        android:src="@drawable/add_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/add_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/dialogCancelButtonAUD"
        style="@style/CustomButtonStyle"
        android:backgroundTint="@color/light_purple"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginRight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail"
        app:strokeColor="@color/orange"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/dialogAddUserButtonAUD"
        style="@style/CustomButtonStyle"
        android:text="@string/add_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginLeft="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>
